# Cannabis-Chat

./: README.md  app.py  mock_data.py  models.py  pyproject.toml
static/css/: style.css
static/js/: chat.js
templates/: index.html
